fix z-index values for nav

--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -4,7 +4,7 @@
 
 .nav-container {
   position: fixed;
-  z-index: 1;
+  z-index: var(--z-index-nav);
   width: 320px;
   background: #f9f9f9;
   scrollbar-width: thin;
@@ -148,7 +148,6 @@ a.menu_link.is-current-page {
   scrollbar-width: thin;
   scrollbar-color: var(--color-border) transparent;
   height: 100%;
-  z-index: 5;
   transition: transform 0.1s;
 }
 
@@ -187,7 +186,7 @@ a.menu_link.is-current-page {
   position: absolute;
   top: 15px;
   right: -1rem;
-  z-index: 99;
+  z-index: var(--z-index-toggle);
   font-size: 24px;
   color: var(--color-brand-blue-secondary);
   background-color: var(--color-brand-gray7);
@@ -249,7 +248,6 @@ a.menu_link.is-current-page {
     height: 100%;
     background: var(--color-brand-gray7);
     top: 0;
-    z-index: 1;
     left: -1000%;
   }
 }
@@ -260,8 +258,8 @@ a.menu_link.is-current-page {
     position: fixed;
     left: 0;
     top: auto;
-    z-index: 9;
     transform: translate(-100%, 0);
+    z-index: var(--z-index-nav-mobile);
   }
 
   .nav.collapse-menu a.menu-expand-toggle {
